# metac-bot-template

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  GTMC1.py  Makefile  README.md  README.txt  SCHEMAS.md  agent_sdk.py  agentic_forecaster_v1.py  analyze_correlations.py  asknews_rateprobe.py  asknews_search.py  asknews_smoketest.py  asknews_smoketest_v2.py  asknews_smoketest_v3.py  basic_forecaster.py  bayesian_forecaster.py  binary_questions.py  bot_helpers.py  bots.py  build_dashboard_parquet.py  cli.py  community_benchmark.py  config.py  dummy_bot.py  exa_search.py  experts.json  forecast_bot.py  forecaster.py  forecasting_tools_readme.md  forecasts-997100APL41GW6K.csv  forecasts.csv  forecasts_by_model.csv  forecasts_mcq_wide.csv  gemini_api.py  (+30 more)
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.streamlit/: secrets.toml
Dashboard/: requirements.txt  streamlit_app.py
Depreciated/: main.py
agents/: agent_creator.py  asknews_scrapper.py  experts_extractor.py
benchmarks/: benchmarks_2025-05-12_13-19-54.json  benchmarks_2025-05-12_13-30-13.json  benchmarks_2025-05-13_09-23-16.json  benchmarks_2025-05-13_09-38-13.json  benchmarks_2025-05-13_09-42-03.json  benchmarks_2025-05-13_16-24-59.json  benchmarks_2025-05-13_16-51-30.json  benchmarks_2025-05-13_16-56-29.json  benchmarks_2025-05-13_17-07-47.json  benchmarks_2025-05-14_08-19-50.json  benchmarks_2025-05-14_08-57-30.json  benchmarks_2025-05-14_09-14-02.json  benchmarks_2025-05-14_09-29-40.json  benchmarks_2025-05-14_09-34-18.json  benchmarks_2025-05-14_09-36-08.json  benchmarks_2025-05-14_09-42-35.json  benchmarks_2025-05-14_09-51-47.json  benchmarks_2025-05-14_10-06-09.json  benchmarks_2025-05-14_10-08-23.json  benchmarks_2025-05-14_10-10-39.json  benchmarks_2025-05-14_10-13-26.json  benchmarks_2025-05-14_10-19-58.json
cache/: actors__q578.json  research_llm__q14333.json  (+10 more)
(+1606 files in other folders)
