[project]
name = "metac-bot-template"
version = "0.1.0"
description = ""
authors = [{name = "Vasile Popescu", email = "elisescu@elisescu.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "asknews>=0.9.1",
    "numpy>=1.26.0",
    "openai>=1.57.4",
    "python-dotenv>=1.0.1",
    "forecasting-tools>=0.2.23",
    "exa-py>=1.15.4",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

